# ramayana-rag-pipeline

./: .env.example  .gitignore  AGENTS.md  README.md  docs_entity_normalization_notes.txt  pyproject.toml  requirements.txt
configs/: deepseek_prompt_templates.yaml  entity_aliases.yaml  pipeline.yaml  transliteration_map.yaml
data/processed/: chapter_index.csv  final_chunks.json  final_chunks.jsonl  final_chunks_preview.md  validation_report.json
scripts/: build_chunks.py  build_preview.py  clean_pages.py  inspect_chapter.py  inspect_pdf.py  inspect_toc.py  normalize_entities.py  parse_chapters.py  parse_qa.py  run_pipeline.py  validate_output.py
src/ramayana_rag/chunking/: chunk_builder.py  token_utils.py
src/ramayana_rag/entities/: alias_loader.py  entity_resolver.py
src/ramayana_rag/extraction/: page_cleaner.py  pdf_extractor.py
src/ramayana_rag/io/: readers.py  writers.py
src/ramayana_rag/parsing/: chapter_parser.py  qa_parser.py  toc_parser.py
src/ramayana_rag/translation/: chapter_translator.py  deepseek_client.py  prompt_builder.py
src/ramayana_rag/validation/: quality_checks.py  reports.py  schema_validator.py
tests/: test_chunk_builder.py  test_entity_resolver.py  test_validation_preview.py
