[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ramayana-rag-pipeline"
version = "1.0.0"
description = "Production-style Telugu Ramayana PDF to English RAG chunk pipeline using DeepSeek-only translation."
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
